<resources>
    <string name="app_name">Github User Application</string>
    <string name="user_name">username</string>
    <string name="location">Location</string>
    <string name="location_name">Location</string>
    <string name="company">Company</string>
    <string name="company_name">Company Name</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repo">Repositories</string>
    <string name="following_number">0</string>
    <string name="followers_number">0</string>
    <string name="repo_number">0</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="background_profile">Background Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="company_icon">Company Icon</string>
    <string name="location_icon">Location Icon</string>
    <string name="tab_follower">Followers</string>
    <string name="tab_following">Following</string>

    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>

    <string-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="confused_cat">confused_cat</string>
    <string name="no_users_found">No Users Found</string>
    <string name="this_user_doesn_t_have_any_followers">This User Doesn\'t have any followers</string>
    <string name="this_user_doesn_t_follow_anyone">This user doesn\'t follow anyone</string>
    <string name="user_not_found">No User found..</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="favourite_menu">favourite menu</string>
    <string name="preferences_menu">preferences menu</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="button_favourite">Button Favourite</string>
    <string name="you_don_t_have_any_favourite_users">You Don\'t Have Any Favourite Users</string>
    <string name="splashscreen">SplashScreen</string>
</resources>