<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:background="@drawable/bg_profile"
            android:contentDescription="@string/background_profile"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/avatar_photo"
            android:visibility="visible"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/profile_picture"
            android:src="@color/cardview_shadow_end_color"
            app:layout_constraintBottom_toTopOf="@id/tv_repo_number"
            app:layout_constraintEnd_toEndOf="@+id/tv_repo_number"
            app:layout_constraintStart_toStartOf="@+id/tv_repo_number"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="35dp"
            android:text="@string/full_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_username"
            app:layout_constraintTop_toBottomOf="@id/tv_username" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/user_name"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/avatar_photo"
            app:layout_constraintTop_toTopOf="@+id/avatar_photo"
            tools:visibility="visible"/>


        <TextView
            android:id="@+id/tv_repo_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/repo_number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_followers_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar_photo"/>

        <TextView
            android:id="@+id/tv_followers_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers_number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tabs"
            app:layout_constraintStart_toStartOf="@+id/tabs"
            app:layout_constraintTop_toTopOf="@+id/tv_repo_number" />

        <TextView
            android:id="@+id/tv_following_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following_number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_followers_number"
            app:layout_constraintTop_toTopOf="@+id/tv_followers_number" />

        <TextView
            android:id="@+id/tv_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/tv_border"
            android:backgroundTint="@color/blue_light"
            android:paddingVertical="4dp"
            android:paddingHorizontal="10dp"
            android:text="@string/repo"
            app:layout_constraintEnd_toEndOf="@+id/tv_repo_number"
            app:layout_constraintStart_toStartOf="@id/tv_repo_number"
            app:layout_constraintTop_toBottomOf="@+id/tv_repo_number" />

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/tv_border"
            android:backgroundTint="@color/blue_light"
            android:paddingVertical="4dp"
            android:paddingHorizontal="10dp"
            android:text="@string/followers"
            app:layout_constraintStart_toStartOf="@+id/tv_followers_number"
            app:layout_constraintEnd_toEndOf="@+id/tv_followers_number"
            app:layout_constraintTop_toBottomOf="@+id/tv_followers_number"/>

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/tv_border"
            android:backgroundTint="@color/blue_light"
            android:paddingVertical="4dp"
            android:paddingHorizontal="10dp"
            android:text="@string/following"
            app:layout_constraintEnd_toEndOf="@id/tv_following_number"
            app:layout_constraintStart_toStartOf="@id/tv_following_number"
            app:layout_constraintTop_toBottomOf="@+id/tv_following_number" />

        <ImageView
            android:id="@+id/icon_company"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_baseline_corporate_fare_24"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            android:contentDescription="@string/company_icon"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@color/blue_sky"
            android:text="@string/company_name"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginEnd="35dp"
            app:layout_constraintBottom_toBottomOf="@+id/icon_company"
            app:layout_constraintStart_toEndOf="@+id/icon_company"
            app:layout_constraintTop_toTopOf="@+id/icon_company"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible"/>

        <ImageView
            android:id="@+id/icon_location"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintStart_toStartOf="@+id/icon_company"
            app:layout_constraintTop_toBottomOf="@+id/icon_company"
            android:contentDescription="@string/location_icon"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tv_location_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="35dp"
            android:text="@string/location_name"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/icon_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_location"
            app:layout_constraintTop_toTopOf="@+id/icon_location"
            tools:visibility="visible" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabSelectedTextColor="?colorOnSecondary"
            app:tabTextColor="?colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <ImageView
            android:id="@+id/content_hider"
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:background="?colorOnPrimary"
            android:contentDescription="@string/background_profile"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible"/>

        <ProgressBar
            android:id="@+id/pb_profile"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@android:color/white"
            android:src="@drawable/ic_baseline_favorite_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/button_favourite"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>